--- a/src/components/MemberList.astro
+++ b/src/components/MemberList.astro
@@ -5,7 +5,7 @@ import { renderRefs } from '../lib/utils.js';
 ---
 
 
-<div class="grid grid-cols-5 gap-2 not-prose">
+<div class="grid grid-cols-3 sm:grid-cols-5 gap-2 not-prose">
     {members.map(m => (
         <div class="mb-3">
             <img src={'/images/members/'+m.img} class="aspect-square object-cover rounded-xl" />
