--- a/src/components/ProjectList.astro
+++ b/src/components/ProjectList.astro
@@ -15,7 +15,7 @@ const arr = projects.filter(p => past ? p.past === true : p.past !== true).rever
 
 <div class="not-prose">
     {arr.map(p => (
-        <div class="flex gap-4 mb-6 items-center">
+        <div class="flex gap-4 mb-4 py-2 px-2 items-center hover:bg-gray-100 rounded-lg">
             <div class="shrink-0"><img src={'/images/projects/'+p.img} class="aspect-square object-cover rounded-xl w-16" /></div>
             <div class="">
                 <div class="flex gap-2 items-center">
