--- a/src/layouts/base.astro
+++ b/src/layouts/base.astro
@@ -17,7 +17,7 @@
                 <div><img src="/logo.png" class="aspect-square w-24" /></div>
                 <h1 class="text-3xl font-semibold">Gwei.cz</h1>
             </div>
-			<div class="prose mt-10">
+			<div class="prose mt-10 px-2">
                 <slot />
 			</div>
 		</div>
