--- a/src/components/ProjectList.astro
+++ b/src/components/ProjectList.astro
@@ -9,16 +9,24 @@ function fixLink (url) {
     return `https://${url}`
 }
 
+function memberIcon (id) {
+    const m = members.find(m => m.id === id)
+    if (!m) {
+        return null
+    }
+    return `<img src="/images/members/${m.img}" title="${m.name}" alt="${m.name}" class="rounded-full w-6 aspect-square object-cover" />`
+}
+
 const arr = projects.filter(p => past ? p.past === true : p.past !== true).reverse()
 ---
 
 
 <div class="not-prose">
     {arr.map(p => (
-        <div class="flex gap-4 mb-4 py-2 px-2 items-center hover:bg-gray-100 rounded-lg">
+        <div class="flex gap-4 mb-4 py-2 px-2 items-center hover:bg-gray-100 rounded-lg w-full group">
             <div class="shrink-0"><img src={'/images/projects/'+p.img} class="aspect-square object-cover rounded-xl w-16" /></div>
-            <div class="">
-                <div class="flex gap-2 items-center">
+            <div class="grow">
+                <div class="flex gap-2 items-center w-full">
                     <div class="font-semibold">
                         {p.refs?.web && (
                             <a href={fixLink(p.refs.web)} class="hover:underline">{p.name}</a>
@@ -26,8 +34,13 @@ const arr = projects.filter(p => past ? p.past === true : p.past !== true).rever
                         {!p.refs?.web && p.name}
                     </div>
                     <div class="text-sm">({p.years})</div>
-                    <div class="text-xs">
+                    <div class="grow text-xs">
                         <Fragment set:html={renderRefs(p.refs)} />
+                    </div>
+                    <div class="flex gap-1 opacity-50 group-hover:opacity-100">
+                        {p.members.map(m => (
+                            <Fragment set:html={memberIcon(m)} />
+                        ))}
                     </div>
                 </div>
                 {p.description && (
