--- a/src/layouts/base.astro
+++ b/src/layouts/base.astro
@@ -15,7 +15,10 @@
 		<div class="mx-auto max-w-2xl my-10">
             <div class="flex gap-2 items-center">
                 <div><img src="/logo.png" class="aspect-square w-24" /></div>
-                <h1 class="text-3xl font-semibold">Gwei.cz</h1>
+                <div>
+                    <h1 class="text-3xl font-semibold">Gwei.cz</h1>
+                    <div class="mt-1 opacity-50">Advocating decentralisation and freedom since 2020</div>
+                </div>
             </div>
 			<div class="prose mt-10 px-2">
                 <slot />
