--- a/src/layouts/base.astro
+++ b/src/layouts/base.astro
@@ -17,7 +17,7 @@
                 <div><img src="/logo.png" class="aspect-square w-24" /></div>
                 <div>
                     <h1 class="text-3xl font-semibold">Gwei.cz</h1>
-                    <div class="mt-1 opacity-50">Advocating decentralization and freedom since 2020</div>
+                    <div class="mt-1 opacity-50 italic">Connecting builders since 2020</div>
                 </div>
             </div>
 			<div class="prose mt-10 px-2">
