--- a/src/components/MemberList.astro
+++ b/src/components/MemberList.astro
@@ -2,13 +2,23 @@
 import { members } from '../data.yaml';
 import { renderRefs } from '../lib/utils.js';
 
+
+function shuffleArr (array){
+    for (var i = array.length - 1; i > 0; i--) {
+        var rand = Math.floor(Math.random() * (i + 1));
+        [array[i], array[rand]] = [array[rand], array[i]]
+    }
+    return array
+}
+
+const arr = shuffleArr(members).filter(m => m.confirmed !== false).sort((x, y) => x.confirmed === false ? 1 : -1)
 ---
 
 
 <div class="grid grid-cols-3 sm:grid-cols-5 gap-2 not-prose">
-    {members.map(m => (
-        <div class="mb-3">
-            <img src={'/images/members/'+m.img} class="aspect-square object-cover rounded-xl" />
+    {arr.map(m => (
+        <div class="mb-3" class:list={[m.confirmed === false ? 'opacity-50' : '']}>
+            <img src={'/images/members/'+m.img} class="aspect-square object-cover rounded-xl border border-1 border-gray-300" />
             <div class="mt-1 font-semibold">{m.name}</div>
             <div class="text-xs">
                 <Fragment set:html={renderRefs(m.refs)} />
