--- a/src/components/MemberList.astro
+++ b/src/components/MemberList.astro
@@ -1,15 +1,6 @@
 ---
 import { members } from '../data.yaml';
-import { renderRefs } from '../lib/utils.js';
-
-
-function shuffleArr (array){
-    for (var i = array.length - 1; i > 0; i--) {
-        var rand = Math.floor(Math.random() * (i + 1));
-        [array[i], array[rand]] = [array[rand], array[i]]
-    }
-    return array
-}
+import { renderRefs, shuffleArr } from '../lib/utils.js';
 
 const arr = shuffleArr(members).filter(m => m.confirmed !== false).sort((x, y) => x.confirmed === false ? 1 : -1)
 ---
