--- a/src/components/MemberList.astro
+++ b/src/components/MemberList.astro
@@ -12,7 +12,7 @@ const arr = shuffleArr(members).filter(m => m.confirmed !== false).sort((x, y) =
             <img src={'/images/members/'+m.img} class="aspect-square object-cover rounded-xl border border-1 border-gray-300" />
             <div class="mt-1 font-semibold">{m.name}</div>
             <div class="text-xs">
-                <Fragment set:html={renderRefs(m.refs)} />
+                <Fragment set:html={renderRefs(m.refs, true)} />
             </div>
         </div>
     ))}
