--- a/src/layouts/base.astro
+++ b/src/layouts/base.astro
@@ -15,8 +15,8 @@
             <div class="flex gap-2 items-center">
                 <div><img src="/logo.png" class="aspect-square w-24" /></div>
                 <div>
-                    <h1 class="text-3xl font-semibold">Gwei.cz</h1>
-                    <div class="mt-1 opacity-50 italic">Connecting builders since 2020</div>
+                    <h1 class="text-3xl font-mono">Gwei.cz</h1>
+                    <div class="mt-1 opacity-50 italic">Building a Decentralized Future Together</div>
                 </div>
             </div>
 			<div class="prose mt-10 px-2">
