--- a/src/components/ProjectList.astro
+++ b/src/components/ProjectList.astro
@@ -19,7 +19,7 @@ const arr = projects.filter(p => past ? p.past === true : p.past !== true).filte
 <div class="not-prose">
     {arr.map(p => (
         <div class="flex gap-4 mb-4 py-2 px-2 items-center hover:bg-gray-100 rounded-lg w-full group" class:list={[p.confirmed === false ? 'opacity-50' : '']}>
-            <div class="shrink-0"><img src={'/images/projects/'+p.img} class="aspect-square object-cover rounded-xl w-20" /></div>
+            <div class="shrink-0"><img src={'/images/projects/'+p.img} class="aspect-square object-fit rounded-xl w-20" /></div>
             <div class="grow">
                 <div class="flex flex-wrap gap-2 items-center w-full">
                     <div class="font-semibold">
