--- a/src/components/ProjectList.astro
+++ b/src/components/ProjectList.astro
@@ -54,7 +54,7 @@ const arr = projects.filter(p => past ? p.past === true : p.past !== true).filte
                 {bonusItems.length > 0 && (
                     <div class="ml-2 mt-2 text-sm flex flex-wrap gap-1">
                         {bonusItems.map(bi =>
-                            <div class="p-2 border border-blue-500/20 bg-blue-100/30 rounded">🎁 Bonus for members: {bi.text}</div>
+                            <div class="p-2 border border-blue-500/20 bg-blue-100/30 rounded">Bonus for members: {bi.text}</div>
                         )}
                     </div>
                 )}
@@ -62,7 +62,7 @@ const arr = projects.filter(p => past ? p.past === true : p.past !== true).filte
                     <div class="ml-2 mt-2 text-sm flex flex-wrap gap-1">
                         {opportunityItems.map(oi => {
                             return <div class="p-2 border border-green-500/20 bg-green-100/30 rounded">
-                                🌟 For ALL:
+                                Opportunity:
                                 {oi.link && (
                                     <a href={oi.link} class="hover:underline">{oi.text}</a>
                                 )}
