--- a/src/components/ProjectList.astro
+++ b/src/components/ProjectList.astro
@@ -51,7 +51,7 @@ const arr = projects.filter(p => past ? p.past === true : p.past !== true).rever
                         ))}
                     </div>
                 )}
-                {bonusItems.length > 0 && (
+                <!--{bonusItems.length > 0 && (
                     <div class="ml-2 mt-2 text-sm flex flex-wrap gap-1">
                         {bonusItems.map(bi =>
                             <div class="p-2 border border-blue-500/20 bg-blue-100/30 rounded">Bonus for members: {bi.text}</div>
@@ -72,7 +72,7 @@ const arr = projects.filter(p => past ? p.past === true : p.past !== true).rever
                             </div>
                         })}
                     </div>
-                )}
+                )}-->
             </div>
         </div>
     )})}
